<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background"
    android:layout_height="match_parent"
    tools:context=".ui.settings.view.SettingsFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:textAlignment="center"
            app:cardBackgroundColor="@color/purple"
            app:cardCornerRadius="20dp"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="47dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/language"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:textAlignment="center"
            app:cardBackgroundColor="@color/purple"
            app:cardCornerRadius="20dp"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="47dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/location"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline10"
        app:layout_constraintVertical_bias="0.0">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/purple_light"
            app:cardCornerRadius="15dp">

            <RadioGroup
                android:id="@+id/radioGroupChooseLanguage"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:checkedButton="@+id/radio_button_1"
                android:gravity="center"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/textView3">

                <RadioButton
                    android:id="@+id/radio_button_English"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimaryLight"
                    android:paddingHorizontal="16dp"
                    android:text="@string/english"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio_button_Arabic"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:paddingHorizontal="16dp"
                    android:text="@string/arabic"
                    android:textColor="@color/white"
                    android:textSize="20sp" />


            </RadioGroup>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/purple_light"
            app:cardCornerRadius="15dp"


            >

            <RadioGroup
                android:id="@+id/radioGroupLocation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:checkedButton="@+id/radio_button_1"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <RadioButton
                    android:id="@+id/radio_button_GPS"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/white"
                    android:paddingHorizontal="16dp"
                    android:text="@string/gps"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio_button_map"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:paddingHorizontal="16dp"
                    android:text="@string/map"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

            </RadioGroup>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/guideline11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:textAlignment="center"
            app:cardBackgroundColor="@color/purple"
            app:cardCornerRadius="20dp"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="47dp">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/wind"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:textAlignment="center"
            app:cardBackgroundColor="@color/purple"
            app:cardCornerRadius="20dp"
            tools:layout_editor_absoluteX="43dp"
            tools:layout_editor_absoluteY="47dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/temperature"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline11">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/purple_light"
            app:cardCornerRadius="15dp">

            <RadioGroup
                android:id="@+id/radioGroupWindSpeed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:checkedButton="@+id/radio_button_1"
                android:gravity="center">

                <RadioButton
                    android:id="@+id/radio_button_MPerSec"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimaryLight"
                    android:paddingHorizontal="16dp"
                    android:text="@string/meter_per_second"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio_button_MilePerHour"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimaryLight"
                    android:paddingHorizontal="16dp"
                    android:text="@string/milePerHour"
                    android:textColor="@color/white"
                    android:textSize="20sp" />


            </RadioGroup>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="16dp"
            android:layout_weight="1"
            app:cardBackgroundColor="@color/purple_light"
            app:cardCornerRadius="15dp">

            <RadioGroup
                android:id="@+id/radioGroupTempDegree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:checkedButton="@+id/radio_button_1"
                android:orientation="vertical"
                app:layout_constraintEnd_toStartOf="@+id/guideline6"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline5"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <RadioButton
                    android:id="@+id/radio_button_C"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimaryLight"
                    android:paddingHorizontal="16dp"
                    android:text="@string/celsius"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio_button_K"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimaryLight"
                    android:paddingHorizontal="16dp"
                    android:text="@string/kelvin"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radio_button_F"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:buttonTint="@color/colorPrimaryLight"
                    android:paddingHorizontal="16dp"
                    android:text="@string/fahrenheit"
                    android:textColor="@color/white"
                    android:textSize="20sp" />
            </RadioGroup>

        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="562dp"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="179dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="478dp" />
    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>