<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="320dp"
    app:cardCornerRadius="16dp"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewChooseStart"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/purple_light"
            app:cardCornerRadius="24dp"
            app:layout_constraintBottom_toTopOf="@+id/radioGroupChooseLanguage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textViewStartTime"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/textViewStartDate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_chainStyle="packed"
                    tools:text="12:35" />

                <TextView
                    android:id="@+id/textViewStartDate"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:gravity="center"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/textViewStartTime"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="@+id/textViewStartTime"
                    app:layout_constraintTop_toBottomOf="@+id/textViewStartTime"
                    tools:text="26/2" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <RadioGroup
            android:id="@+id/radioGroupChooseLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginBottom="32dp"
            android:checkedButton="@+id/radio_button_1"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/buttonCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <RadioButton
                android:id="@+id/radio_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/black"
                android:checked="true"
                android:text="@string/alarm"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/radio_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginStart="16dp"
                android:buttonTint="@color/black"
                android:text="@string/notification"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RadioGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSave"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="@+id/buttonCancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/buttonCancel"
            app:layout_constraintTop_toTopOf="@+id/buttonCancel"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCancel"
            android:layout_width="105dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="24dp"
            android:text="@string/places_cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonSave"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>